Google font raleway integration

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,7 @@
 
  @import 'bootstrap';
  @import 'comments.scss', 'fields', 'messages', 'scaffolds';
+
+ html, body {
+     font-family: 'Raleway', sans-serif;
+ }
