--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,47 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="signup-bg">
+  <div class="container content">
+    <div class="row">
+      <div class="col-md-8 col-12 col-sm-12">
+        <h1 class="brand text-white">DigitalGrin</h1>
+        <h3 class="text-white">Communauté francophone où les amoureux<br> des technologies partagent leurs idées 
+          et s’aident mutuellement à progresser.<br><br>Tout le monde peut partager des articles,
+          des questions, des discussions et trouver des mentors.
+        </h3>
+      </div>
+      <div class="col-md-4 col-1 col-sm-12">
+        <div class="card">
+          <div class="card-header bg-warning text-black text-center"><h4>INSCRIPTION</h4></div>
+          <div class="card-body">
+              <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+              <%= render "devise/shared/error_messages", resource: resource %>
+            
+              <div class="field">
+                <%= f.label :Email %><br />
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+              </div>
+            
+              <div class="field">
+                <%= f.label :"mot de passe" %>
+                <% if @minimum_password_length %>
+                <em>(<%= @minimum_password_length %> characters minimum)</em>
+                <% end %><br />
+                <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+              </div>
+            
+              <div class="field">
+                <%= f.label :"Confirmer mot de passe" %><br />
+                <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+              </div>
+            
+              <div class="actions">
+                <%= f.submit "INSCRIPTION", class: "btn btn-warning" %>
+              </div>
+            <% end %>
+            
+            <%= render "devise/shared/links" %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
