Posts configuration Add select with field_id foreign key in posts and messages

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -16,9 +16,9 @@
     <%= form.text_field :content %>
   </div>
 
-  <%= f.hidden_field :user_id, :value => current_user.id %>
+  <%= form.hidden_field :user_id, :value => current_user.id %>
 
-  <%= f.hidden_field :message_id%>
+  <%= form.hidden_field :message_id%>
 
   <div class="actions">
     <%= form.submit %>
