--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,31 +1,97 @@
-<p id="notice"><%= notice %></p>
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white nav-border">
+  <div class="container">
+    <a class="navbar-brand" href="#"><b>DigitalGrin</b></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item active">
+          <a class="nav-link pl-5" href="#"><%= octicon "home", :height => 32,  :"aria-label" => "hi" %><span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link pl-5" href="#"><i class="fa fa-bell fa-2x"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link pl-5" href="#"><i class="fa fa-edit fa-2x"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link pl-5" href="#"><i class="fa fa-comments fa-2x"></i></a>
+        </li>
+      </ul>
+    </div>
+    <span class="dropdown my-2 my-sm-0">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fa fa-user-cog fa-2x"></i>
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        <% if user_signed_in? %>
+          <div class="dropdown-item"><strong><%= current_user.email %></strong></div>
+          <div class="dropdown-item"><%= link_to 'Profil', edit_user_registration_path %></div>
+          <div class="dropdown-item"><%= link_to "Deconnexion", destroy_user_session_path, method: :delete %></div>
+        <% end %>
+      </div>
+    </span>
+    <!-- <li class="nav-item dropdown my-2 my-sm-0">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Dropdown link
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        <a class="dropdown-item" href="#">Action</a>
+        <a class="dropdown-item" href="#">Another action</a>
+        <a class="dropdown-item" href="#">Something else here</a>
+      </div>
+    </li> -->
+  </div>
+</nav>
 
-<h1>Posts</h1>
+<div class="row">
+  <div class="col-md-3 side-div bg-white side-div-left">
+    <div class="side-div-content">
+      <h4><b>Home</b></h4>
+      <ul class="list-group">
+        <li><span class="oi oi-icon-name" title="icon name" aria-hidden="true"></span> Events</li>
+        <li></li>
+        <li>Team</li>
+        <li>Paramètres</li>
+      </ul>
+    </div>
+  </div>
+  <div class="col-md-6 col-xs-12 bg-light">
+    <center class="post-content">
+      <h1>Posts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th>User</th>
-      <th>Field</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <table>
+        <thead>
+          <tr>
+            <th>Content</th>
+            <th>User</th>
+            <th>Field</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+      
+        <tbody>
+          <% @posts.each do |post| %>
+            <tr>
+              <td><%= post.content %></td>
+              <td><%= post.user_id %></td>
+              <td><%= post.field_id %></td>
+              <td><%= link_to 'Show', post %></td>
+              <td><%= link_to 'Edit', edit_post_path(post) %></td>
+              <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+      
+      <br>
+      
+      <%= link_to 'New Post', new_post_path %>
+      <span class="oi oi-icon-name" title="icon name"></span>
+    </center>
+  </div>
+  <div class="col-md-3 side-div bg-white side-div-right"></div>
+</div>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.content %></td>
-        <td><%= post.user_id %></td>
-        <td><%= post.field_id %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
-
-<%= link_to 'New Post', new_post_path %>
