--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white nav-border">
   <div class="container">
-    <a class="navbar-brand" href="#"><b>DigitalGrin</b></a>
+    <a class="navbar-brand text-warning" href="#"><b>DigitalGrin</b></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,7 +13,7 @@
           <a class="nav-link pl-5" href="#"><%= octicon "bell", :height => 32, :color => '#fec235',  :"aria-label" => "bell" %></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link pl-5" href="#"><%= octicon "pencil", :height => 32, :color => '#fec235',  :"aria-label" => "pencil" %></a>
+          <a class="nav-link pl-5" href="<%= new_post_path %>"><%= octicon "pencil", :height => 32, :color => '#fec235',  :"aria-label" => "pencil" %></a>
         </li>
         <li class="nav-item">
           <a class="nav-link pl-5" href="#"><%= octicon "comment-discussion", :height => 32, :color => '#fec235',  :"aria-label" => "comment-discussion" %></a>
@@ -68,36 +68,18 @@
   </div>
   <div class="col-md-6 col-xs-12 bg-light">
     <center class="post-content">
-      <h1>Posts</h1>
+      <%= link_to 'Ecrire un article', new_post_path, class: "btn btn-warning" %><br><br>
 
-      <table>
-        <thead>
-          <tr>
-            <th>Content</th>
-            <th>User</th>
-            <th>Field</th>
-            <th colspan="3"></th>
-          </tr>
-        </thead>
-      
-        <tbody>
-          <% @posts.each do |post| %>
-            <tr>
-              <td><%= post.content %></td>
-              <td><%= post.user_id %></td>
-              <td><%= post.field_id %></td>
-              <td><%= link_to 'Show', post %></td>
-              <td><%= link_to 'Edit', edit_post_path(post) %></td>
-              <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-      
-      <br>
-      
-      <%= link_to 'New Post', new_post_path %>
-      <span class="oi oi-icon-name" title="icon name"></span>
+      <% @posts.each do |post| %>
+        <div class="card">
+          <div class="card-body">
+              <h3><b><%= link_to raw(post.title), post %></b></h3>
+          </div>
+          <div class="card-footer">
+              Auteur : <%= post.user_id %> | <%= post.field_id %> | <%= post.created_at.strftime('%Y-%m-%d %H:%M:%S') %>
+          </div>
+        </div><br>
+      <% end %>
     </center>
   </div>
   <div class="col-md-3 side-div bg-white side-div-right">
