--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Post</h1>
+<%= render 'form', post: @post %><br>
 
-<%= render 'form', post: @post %>
+<div class="container">
+    <div class="row">
+        <div class="col-md-10 offset-md-1 col-sm-12">
+            <%= link_to 'Retour aux articles', posts_path %>
+        </div>
+    </div>
+</div>
 
-<%= link_to 'Back', posts_path %>
+
