--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>Content</th>
       <th>User</th>
-      <th>Message</th>
+      <th>Post</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,7 +15,7 @@
       <tr>
         <td><%= comment.content %></td>
         <td><%= comment.user_id %></td>
-        <td><%= comment.message_id %></td>
+        <td><%= comment.post_id %></td>
         <td><%= link_to 'Show', comment %></td>
         <% if user_signed_in? %>
 	        <% if current_user.id == comment.user_id %>
