--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Message:</strong>
-  <%= @comment.message_id %>
+  <strong>Post:</strong>
+  <%= @comment.post_id %>
 </p>
 
 <%= link_to 'Edit', edit_comment_path(@comment) %> |
