Create controller pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,14 @@
     padding-top: 0;
  }
 
+ .space-top-index {
+     padding-top: 15vh;
+ }
+ 
+ .space-top-show {
+    padding-top: 6vh;
+}
+
 .nav-border {
     border-bottom: 1px solid #C0C0C0;
 }
