--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Message</h1>
+<center>
+    <h1>Modifier votre question</h1>
+</center>
 
 <%= render 'form', message: @message %>
 
-<%= link_to 'Show', @message %> |
-<%= link_to 'Back', messages_path %>
+<%= link_to 'Détail', @message %> |
+<%= link_to 'Retour', messages_path %>
