--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,33 +1,117 @@
-<<h1>Messages</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th>User</th>
-      <th>Field</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @messages.each do |message| %>
-      <tr>
-        <td><%= message.content %></td>
-        <td><%= message.user_id %></td>
-        <td><%= message.field_id %></td>
-        <td><%= link_to 'Show', message %></td>
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white nav-border">
+  <div class="container">
+    <a class="navbar-brand text-warning" href="#"><b>DigitalGrin</b></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item active">
+          <a class="nav-link pl-5" href="/"><%= octicon "home", :height => 32, :color => '#fec235',  :"aria-label" => "home" %><span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link pl-5" href="#"><%= octicon "bell", :height => 32, :color => '#fec235',  :"aria-label" => "bell" %></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link pl-5" href="<%= new_post_path %>"><%= octicon "pencil", :height => 32, :color => '#fec235',  :"aria-label" => "pencil" %></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link pl-5" href="<%= messages_path %>"><%= octicon "comment-discussion", :height => 32, :color => '#fec235',  :"aria-label" => "comment-discussion" %></a>
+        </li>
+      </ul>
+    </div>
+    <span class="dropdown my-2 my-sm-0">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <%= octicon "person", :height => 32,  :"aria-label" => "person" %>
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
         <% if user_signed_in? %>
-	        <% if current_user.id == message.user_id %>
-		        <td><%= link_to 'Edit', edit_message_path(message) %></td>
-		        td><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-	        <% end %>
-	      <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+          <div class="dropdown-item"><strong><%= current_user.email %></strong></div>
+          <div class="dropdown-item"><%= link_to 'Profil', edit_user_registration_path %></div>
+          <div class="dropdown-item"><%= link_to "Deconnexion", destroy_user_session_path, method: :delete %></div>
+        <% end %>
+      </div>
+    </span>
+  </div>
+</nav>
 
-<br>
+<div class="container space-top-index">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="card border-warning">
+        <div class="card-body">
+          <div>
+            <h6>A propos</h6>
+          </div>
+          <div>
+              <h6>Sponsors</h6>
+            </div>
+            <div>
+                <h6>Equipe</h6>
+              </div>
+          <div>
+            <h6>Contact</h6>
+          </div>
+          <div>
+            <h6>Conditions d'utilisation</h6>
+          </div>
+          <div>
+              <h6>Code de conduite</h6>
+            </div>
+        </div>
+      </div><br>
 
-<%= link_to 'New Message', new_message_path %>
+      <div class="card border-warning">
+        <div class="card-body">
+          <div>
+            <h6>
+              <%= octicon "organization", :height => 18,  :"aria-label" => "organization" %>
+              Mentorat</h6>
+            </div><br>
+          <div>
+            <h6>
+              <%= octicon "calendar", :height => 18,  :"aria-label" => "calendar" %>
+              Evènements</h6>
+          </div><br>
+          <div>
+            <h6>
+              <%= octicon "file-code", :height => 18,  :"aria-label" => "file-code" %>
+              Projets open-source</h6>
+          </div><br>
+          <div>
+            <h6>
+              <%= octicon "gear", :height => 18,  :"aria-label" => "gear" %>
+              Paramètres</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6 col-xs-12">
+      <center class="">
+        <%= link_to 'Posez votre question', new_message_path, class: "btn btn-warning" %><br><br>
+  
+        <% @messages.each do |message| %>
+          <div class="card">
+            <div class="card-body">
+                <h5><b><%= link_to raw(message.title), message %></b></h5>
+            </div>
+            <div class="card-footer">
+                Auteur : <%= message.user.email %> | <%= message.field.name %> | <%= message.created_at.strftime('%d %B') %>
+            </div>
+          </div><br>
+        <% end %>
+      </center>
+    </div>
+    <div class="col-md-3">
+      <div class="card border-warning">
+        <div class="card-body">
+            <h6>Community sponsors</h6>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  
+  
+  
+  
