--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container article-show-top">
+<div class="container space-top-show">
   <div class="row">
     <div class="col-md-9 col-sm-12">
       <div class="card">
