--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,3 +54,17 @@
 .article-border {
     border: 2px solid #e8e7e7;
 }
+
+.about-content {
+    line-height: 30px;
+    text-align: justify;
+}
+
+.bottom-menu {
+    display: flex;
+    justify-content: space-around;
+}
+
+.menu-content {
+    font-size: 16px;
+}
