--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -34,8 +34,11 @@
       </center>
     </div>
   </div>
+</div><br>
+
+<div class="container">
+    <%= link_to 'Modifier', edit_post_path(@post), class: "btn btn-default" %> |
+    <%= link_to 'Retour', posts_path, class: "btn btn-default" %>
+    <%= link_to 'Supprimer', @post, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
 </div>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
-<%= link_to 'Destroy', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
