Use postgres as production database

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -10,7 +10,7 @@
           <a class="nav-link pl-5" href="/"><%= octicon "home", :height => 32, :color => '#fec235',  :"aria-label" => "home" %><span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link pl-5" href="<%= notifications_path %>"><%= octicon "bell", :height => 32, :color => '#fec235',  :"aria-label" => "bell" %></a>
+          <a class="nav-link pl-5" href="#"><%= octicon "bell", :height => 32, :color => '#fec235',  :"aria-label" => "bell" %></a>
         </li>
         <li class="nav-item">
           <a class="nav-link pl-5" href="<%= new_post_path %>"><%= octicon "pencil", :height => 32, :color => '#fec235',  :"aria-label" => "pencil" %></a>
