Add omniauth-facebook gem Gem configuration Add a page for user profil

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,7 +35,9 @@
             
               <div class="actions">
                 <%= f.submit "INSCRIPTION", class: "btn btn-warning" %>
+                <%= link_to "Facebook", user_facebook_omniauth_authorize_path, class: "btn btn-primary text-white" %>
               </div>
+
             <% end %>
             
             <%= render "devise/shared/links" %>
