Formatage des pages de connexion via facebook uniquement

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,9 +10,9 @@
       </div>
       <div class="col-md-4 col-1 col-sm-12">
         <div class="card">
-          <div class="card-header bg-warning text-black text-center"><h4>INSCRIPTION</h4></div>
+          <div class="card-header bg-warning text-black text-center"><h4>CONNECTEZ-VOUS</h4></div>
           <div class="card-body">
-              <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+              <!-- <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
               <%= render "devise/shared/error_messages", resource: resource %>
             
               <div class="field">
@@ -31,16 +31,18 @@
               <div class="field">
                 <%= f.label :"Confirmer mot de passe" %><br />
                 <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
-              </div>
+              </div> -->
             
               <div class="actions">
-                <%= f.submit "INSCRIPTION", class: "btn btn-warning" %>
-                <%= link_to "Facebook", user_facebook_omniauth_authorize_path, class: "btn btn-primary text-white" %>
+                <!-- <%= f.submit "INSCRIPTION", class: "btn btn-warning" %> -->
+                <div>
+                  <!-- <i class="fab fa-facebook fa-2x"></i> -->
+                  <%= link_to "Facebook", user_facebook_omniauth_authorize_path, class: "btn btn-primary text-white" %>
+                </div>
               </div>
 
             <% end %>
             
-            <%= render "devise/shared/links" %>
           </div>
         </div>
       </div>
